--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "@angular/platform-browser-dynamic": "4.4.3",
     "@angular/router": "4.4.3",
     "@ionic-native/core": "4.3.0",
+    "@ionic-native/geolocation": "^4.4.0",
     "@ionic-native/splash-screen": "4.3.0",
     "@ionic-native/sqlite": "^4.4.0",
     "@ionic-native/status-bar": "4.3.0",
-    "@ionic/storage": "2.0.1",
+    "@ionic/storage": "^2.0.1",
     "cordova-android": "~6.3.0",
     "cordova-plugin-device": "^1.1.4",
+    "cordova-plugin-geolocation": "^3.0.0",
     "cordova-plugin-ionic-webview": "^1.1.15",
     "cordova-plugin-splashscreen": "^4.0.3",
     "cordova-plugin-statusbar": "https://github.com/apache/cordova-plugin-statusbar.git",
@@ -53,7 +55,10 @@
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
-      "cordova-sqlite-storage": {}
+      "cordova-sqlite-storage": {},
+      "cordova-plugin-geolocation": {
+        "GEOLOCATION_USAGE_DESCRIPTION": "To locate you"
+      }
     },
     "platforms": [
       "android"
