minimal viable process

--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,5 +1,5 @@
 {
-  "name": "jewellery-store-app",
+  "name": "Xsource-mobile-app",
   "app_id": "",
   "type": "ionic-angular",
   "integrations": {
