--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "jewellery-store-mobile-app",
+  "name": "Xsource-mobile-app",
   "version": "0.0.1",
-  "author": "Kyra-square",
+  "author": "Mohamed-Ragab",
   "homepage": "",
   "private": true,
   "scripts": {
@@ -23,6 +23,7 @@
     "@angular/router": "4.4.3",
     "@ionic-native/core": "4.3.0",
     "@ionic-native/geolocation": "^4.4.0",
+    "@ionic-native/native-storage": "^4.4.2",
     "@ionic-native/splash-screen": "4.3.0",
     "@ionic-native/sqlite": "^4.4.0",
     "@ionic-native/status-bar": "4.3.0",
@@ -31,12 +32,14 @@
     "cordova-plugin-device": "^1.1.4",
     "cordova-plugin-geolocation": "^3.0.0",
     "cordova-plugin-ionic-webview": "^1.1.15",
+    "cordova-plugin-nativestorage": "^2.2.2",
     "cordova-plugin-splashscreen": "^4.0.3",
     "cordova-plugin-statusbar": "https://github.com/apache/cordova-plugin-statusbar.git",
     "cordova-plugin-whitelist": "^1.3.1",
     "cordova-sqlite-storage": "^2.1.1",
     "ionic-angular": "3.7.1",
     "ionic-plugin-keyboard": "^2.2.1",
+    "ionic2-rating": "^1.2.2",
     "ionicons": "3.0.0",
     "rxjs": "5.4.3",
     "sw-toolbox": "3.6.0",
@@ -58,7 +61,8 @@
       "cordova-sqlite-storage": {},
       "cordova-plugin-geolocation": {
         "GEOLOCATION_USAGE_DESCRIPTION": "To locate you"
-      }
+      },
+      "cordova-plugin-nativestorage": {}
     },
     "platforms": [
       "android"
