--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "4.4.3",
     "@ionic-native/core": "4.3.0",
     "@ionic-native/geolocation": "^4.4.0",
+    "@ionic-native/keyboard": "^4.5.3",
     "@ionic-native/native-storage": "^4.4.2",
     "@ionic-native/splash-screen": "4.3.0",
     "@ionic-native/sqlite": "^4.4.0",
