--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "4.4.3",
     "@angular/platform-browser-dynamic": "4.4.3",
     "@angular/router": "4.4.3",
+    "@angular/tsc-wrapped": "^4.4.6",
     "@ionic-native/core": "4.3.0",
     "@ionic-native/facebook": "^4.5.3",
     "@ionic-native/geolocation": "^4.4.0",
@@ -32,6 +33,7 @@
     "@ionic-native/status-bar": "4.3.0",
     "@ionic/storage": "^2.0.1",
     "angularfire2": "^5.0.0-rc.6",
+    "autoprefixer": "^8.1.0",
     "cordova-android": "~6.3.0",
     "cordova-plugin-device": "^1.1.4",
     "cordova-plugin-facebook4": "^1.9.1",
@@ -50,6 +52,7 @@
     "ionicons": "3.0.0",
     "promise-polyfill": "^7.0.2",
     "rxjs": "5.4.3",
+    "setimmediate": "^1.0.5",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.18"
   },
