--- a/package.json
+++ b/package.json
@@ -34,17 +34,17 @@
     "@ionic/storage": "^2.0.1",
     "angularfire2": "^5.0.0-rc.6",
     "autoprefixer": "^8.1.0",
-    "cordova-android": "~6.3.0",
-    "cordova-plugin-device": "^1.1.4",
+    "cordova-android": "6.3.0",
+    "cordova-plugin-device": "^1.1.7",
     "cordova-plugin-facebook4": "^1.9.1",
     "cordova-plugin-geolocation": "^3.0.0",
     "cordova-plugin-googleplus": "^5.2.1",
-    "cordova-plugin-ionic-webview": "^1.1.15",
-    "cordova-plugin-nativestorage": "^2.2.2",
-    "cordova-plugin-splashscreen": "^4.0.3",
+    "cordova-plugin-ionic-webview": "^1.2.1",
+    "cordova-plugin-nativestorage": "^2.3.1",
+    "cordova-plugin-splashscreen": "^4.1.0",
     "cordova-plugin-statusbar": "https://github.com/apache/cordova-plugin-statusbar.git",
-    "cordova-plugin-whitelist": "^1.3.1",
-    "cordova-sqlite-storage": "^2.1.1",
+    "cordova-plugin-whitelist": "^1.3.3",
+    "cordova-sqlite-storage": "^2.3.2",
     "firebase": "^4.9.1",
     "ionic-angular": "3.7.1",
     "ionic-plugin-keyboard": "^2.2.1",
