--- a/package.json
+++ b/package.json
@@ -36,13 +36,13 @@
     "autoprefixer": "^8.1.0",
     "cordova-android": "6.3.0",
     "cordova-plugin-device": "^1.1.7",
-    "cordova-plugin-facebook4": "^1.9.1",
+    "cordova-plugin-facebook4": "^1.10.1",
     "cordova-plugin-geolocation": "^3.0.0",
-    "cordova-plugin-googleplus": "^5.2.1",
+    "cordova-plugin-googleplus": "^5.3.0",
     "cordova-plugin-ionic-webview": "^1.2.1",
     "cordova-plugin-nativestorage": "^2.3.1",
     "cordova-plugin-splashscreen": "^4.1.0",
-    "cordova-plugin-statusbar": "https://github.com/apache/cordova-plugin-statusbar.git",
+    "cordova-plugin-statusbar": "git+https://github.com/apache/cordova-plugin-statusbar.git",
     "cordova-plugin-whitelist": "^1.3.3",
     "cordova-sqlite-storage": "^2.3.2",
     "firebase": "^4.9.1",
