--- a/package.json
+++ b/package.json
@@ -32,19 +32,20 @@
     "@ionic-native/sqlite": "^4.4.0",
     "@ionic-native/status-bar": "4.3.0",
     "@ionic/storage": "^2.0.1",
+    "@types/node": "8.0.19 ",
     "angularfire2": "^5.0.0-rc.6",
     "autoprefixer": "^8.1.0",
     "cordova-android": "6.3.0",
     "cordova-plugin-device": "^1.1.7",
     "cordova-plugin-facebook4": "^1.10.1",
     "cordova-plugin-geolocation": "^3.0.0",
-    "cordova-plugin-googleplus": "^5.3.0",
+    "cordova-plugin-googleplus": "^5.3.1",
     "cordova-plugin-ionic-webview": "^1.2.1",
-    "cordova-plugin-nativestorage": "^2.3.1",
+    "cordova-plugin-nativestorage": "^2.3.2",
     "cordova-plugin-splashscreen": "^4.1.0",
     "cordova-plugin-statusbar": "git+https://github.com/apache/cordova-plugin-statusbar.git",
     "cordova-plugin-whitelist": "^1.3.3",
-    "cordova-sqlite-storage": "^2.3.2",
+    "cordova-sqlite-storage": "^2.4.0",
     "firebase": "^4.9.1",
     "ionic-angular": "3.7.1",
     "ionic-plugin-keyboard": "^2.2.1",
